[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.1.0", features = ["rayon", "serde"] }
lurk = { git = "https://github.com/gabriel-barrett/lurk-rs", branch = "runtime-compiler" }
